--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,6 @@
 .PHONY : C3P0 R2D2 clean
-mp_objects = $(patsubst %.cpp,%.o,$(wildcard ../../MMTP/*.cpp)) 
-mp_sources = $(wildcard ../../MMTP/*.cpp)
+mp_objects=$(patsubst %.cpp,%.o,$(wildcard ../../MMTP/*.cpp)) 
+mp_sources=$(wildcard ../../MMTP/*.cpp)
 C3P0 : C3P0.o dktool.o darkside.o $(mp_objects)
 	gcc -o C3P0 C3P0.o dktool.o darkside.o $(mp_objects) -ggdb -I ../../MMTP
 C3P0.o : C3P0.cpp
@@ -9,8 +9,8 @@ dktool.o : dktool.cpp
 	gcc  -c dktool.cpp  -ggdb
 darkside.o : darkside.cpp
 	gcc  -c darkside.cpp -I ../../MMTP -ggdb 
-$(mp_objects): $(mp_sources)
-	gcc -c $^  -I /Users/quanzhou/oscode/ZLTCPTransfer/src -ggdb
+$(mp_objects) : $(mp_sources)
+	gcc -c $^  -I ../../ZLTCPTransfer/src -ggdb
 
 R2D2 : R2D2.o dktool.o $(mp_objects)
 	gcc -o R2D2 R2D2.o dktool.o $(mp_objects) -ggdb -I ../../MMTP
